--- a/frontendMasters/calculator/index.html
+++ b/frontendMasters/calculator/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js"></script>
-
     <title>IOS Calculator</title>
   </head>
   <body>
@@ -15,7 +13,7 @@
         <span class="dispaly-result" id="result">0</span>
       </section>
 
-      <section class="calculator-buttons" onclick="test()">
+      <section class="calculator-buttons">
         <button class="button-calculator clear">C</button>
         <button class="button-calculator"><-</button>
         <button class="button-calculator last">/</button>
@@ -37,5 +35,6 @@
         <button class="button-calculator last">=</button>
       </section>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
